# spwm

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
src/: channel.rs  lib.rs
tests/: channel_builder.rs  spwm.rs
