[package]
name = "spwm"
version = "0.1.5"
description = "Software PWM for microcontrollers"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vpetrigo/spwm"
authors = ["Vladimir Petrigo <vladimir.petrigo@gmail.com>"]
categories = ["no-std", "embedded"]
keywords = ["pwm", "software-pwm", "microcontroller", "duty-cycle", "led-control"]

exclude = [
    "docs/",
    ".*"
]

[dependencies]
